<?xml version="1.0"?>
<package format="2">
  <name>velodyne_utils</name>
  <version>0.0.0</version>
  <description>Package with some utilities and experiments for Velodyne LiDAR</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <license>TODO</license>
  <author email="markovalex95@gmail.com">Markov Alexey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
  </export>
</package>
